--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -47,9 +47,9 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="LG">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 8px 4px; font-size: calc(1em + 16px);">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
@@ -73,7 +73,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Скачать-Старые-Windows.html" style="padding: 10px 20px;">Скачать Старые Windows</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 12px 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -113,16 +113,16 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-grey-90 u-section-1" id="sec-b057">
+    <section class="u-clearfix u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.1</h1>
-        <h6 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 V4 by Adderly (27.06.2022)<br>
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 8.1</h1>
+        <h6 class="u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-2">Windows 8.1 V4 by Adderly (27.06.2022)<br>
         </h6>
         <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows8.xx64-2022-06-24-14-05-36.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows8.xx64-2022-06-24-14-06-58.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-3" src="images/Windows8.xx64-2022-06-24-14-05-31.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows8.xx64-2022-06-24-14-06-06.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-3"> Сборка обновлена до Update 3 <br>
+        <p class="u-text u-text-white u-text-3"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
           <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди"&nbsp;<br>
@@ -140,7 +140,7 @@
         </p>
         <a href="https://drive.google.com/file/d/1Z0ruubtC0Bayk3yf_5o3uE0imnDBYiGa/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 V4 by Adderly</a>
         <a href="https://www.mediafire.com/file/0qut2q27ah8c3dn/Windows+8.1+V4+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
-        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
@@ -148,7 +148,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
       </div></footer>
