--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="LG">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="padding: 8px 4px; font-size: calc(1em + 16px);">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
@@ -73,7 +73,7 @@
 </div>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="Скачать-Старые-Windows.html" style="padding: 10px 20px;">Скачать Старые Windows</a>
-</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
+</li><li class="u-nav-item"><a class="u-active-grey-70 u-border-palette-1-base u-button-style u-grey-70 u-hover-grey-70 u-nav-link u-text-active-custom-color-6 u-text-hover-palette-2-light-1" href="FineWork.html" style="padding: 10px 12px 10px 20px;">FineWork</a><div class="u-nav-popup"><ul class="u-border-2 u-border-grey-75 u-h-spacing-10 u-nav u-unstyled u-v-spacing-15"><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/Product/FineWork-Type-Pro.html">FineWork Type PRO</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%98%D0%B3%D1%80%D1%8B.html">Игры</a>
 </li><li class="u-nav-item"><a class="u-button-style u-grey-50 u-nav-link" href="https://finework.tk/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F.html">Приложения</a>
 </li></ul>
@@ -113,41 +113,34 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-3736">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-3736" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-1">
-          <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и Яндексов.
+        <h1 class="u-text u-text-white u-text-1">
+          <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и яндексов.
           </span>
           <br>
         </h1>
-        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-1">Информация о сборках</a>
+        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-1">Информация о сборках</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-2">Сборки Windows 7</a>
-        <p class="u-text u-text-default u-text-2">Новинки</p>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-palette-1-dark-1 u-radius-50 u-btn-3">Windows 7 V3 by Adderly</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-6">Сборки Windows 10</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-7">Сборки Windows 11</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-palette-1-dark-1 u-radius-50 u-btn-8">Windows 11 V2 by Adderly</a>
-        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-9">Windows Lite x32 сборки</a>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-10">Windows Lite сборки</a>
-        <p class="u-text u-text-3">Попробовав мои сборки, вы измените мнение о том, ​​что все сборки ужасны. </p>
-        <p class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Мои соц. сети</p>
-        <a href="https://t.me/adderlyev" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-11">Личный блог в Telegram</a>
-        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-12">Telegram канал, о сборках</a>
-        <a href="https://t.me/finework" class="u-border-none u-btn u-button-style u-palette-1-base u-btn-13">Telegram канал моей компании</a>
-        <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ?" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-14">Мой личный YouTube канал</a>
-        <a href="https://www.youtube.com/channel/UCeb6IN4z_B1qYA7CKouMIrQ" class="u-border-none u-btn u-button-style u-custom-color-5 u-btn-15">YouTube канал моей компании</a>
-        <a href="https://tiktok.com/@igroman255" class="u-black u-border-none u-btn u-button-style u-btn-16">Тик ток моего очень хорошего друга</a>
-        <a href="https://www.tiktok.com/@pepsya_kotya" class="u-black u-btn u-button-style u-btn-17">Мой личный TikTok</a>
-        <a href="https://www.donationalerts.com/r/finework" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-18">Поддержать меня и FineWork</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-5">Сборки Windows 10</a>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-6">Сборки Windows 11</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-7">Windows Lite x32 сборки</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-8">Windows Lite сборки</a>
+        <a href="Скачать-Старые-Windows.html" data-page-id="573923297" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-9">Скачать старые Windows</a>
+        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-10">Софт от Аддерли</a>
+        <a href="https://donatello.to/finework" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-11" target="_blank">Поддержать гривной</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 20px; bottom: 20px; padding: 10px; background-image: none; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);" class="u-back-to-top u-custom-color-11 u-icon u-icon-circle u-opacity u-opacity-75" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   </body>
 </html>
